Fix: restyling the h1

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <main class="m-5 mt-10 max-w-screen-md">
       <!-- landing section -->
       <section id="">
-        <h2 class="text-5xl mt-32 leading-tight font-bold uppercase md:w-32">
+        <h2 class="text-5xl mt-32 w-20 leading-tight font-bold uppercase">
           We create your digital
         </h2>
         <div
